feat: extract source-preserving V2 semantic models